Actually get a test run successful